<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ldn_itenssel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:id="@+id/list_merc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="05dp"
                        android:layout_marginRight="05dp"
                        android:stretchColumns="0,1,2,3,4,5"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="1dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_coddiscri"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_discri"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_dev"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_troca"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_retorno"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_bonific"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_perda"
                                android:textStyle="bold" />

                        </TableRow>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/cardview_dark_background"
                            android:focusable="false" />

                    </TableLayout>

                </HorizontalScrollView>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_avc"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableLeft="@android:drawable/ic_menu_send"
                android:text="@string/btn_fnlcfg"
                android:onClick="setFinaliza"
                app:backgroundTint="#FFA500" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>