<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCfg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/lyd_inf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/lyd_ifcfg"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lyd_ws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lyd_ws"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="30dp" />

        <EditText
            android:id="@+id/txt_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lyd_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lyd_time" />

        <EditText
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:maxLength="4"
            android:inputType="number"
            android:text=""
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/btn_fnlcfg"
            android:onClick="setGrvCfg"
            app:backgroundTint="#FFA500" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>