<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@mipmap/valedosol_transp"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="112dp" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/progressBar"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginTop="500dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

           <TextView
                android:id="@+id/text_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_login"

                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_login"/>

            <EditText
                android:id="@+id/editText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:text="" />

            <TextView
                android:id="@+id/textView_senha"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_passw" />

            <EditText
                android:id="@+id/editText_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:textStyle="bold"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_btn"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="400dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:text="@string/lyd_versao"
                android:textColor="#FFA500"
                android:textSize="10sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_slv"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="setValidLogin"
                android:text="@string/btn_entrar"
                app:backgroundTint="#FFA500"
                tools:ignore="OnClick" />

        </LinearLayout>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>