<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_perda">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ldn_transmitir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lyd_inf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:text="@string/lyd_tela"
                android:textColor="#F2910A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginLeft="0dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ldn_lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lyb_cliSync"
                android:layout_width="match_parent"
                android:layout_marginLeft="05dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#F2910A"
                android:text="@string/lyd_perdaPrd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_vendas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/txt_produto"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:ems="1"
                android:inputType="textCapCharacters"
                android:maxLines="10"
                android:minLines="1"
                android:layout_marginLeft="03dp"
                android:singleLine="true"
                android:text=""
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_itensperda"
            android:layout_width="wrap_content"
            android:layout_height="540dp"
            android:layout_marginTop="110dp"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:id="@+id/list_itemper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="05dp"
                        android:layout_marginRight="05dp"
                        android:stretchColumns="0,1,2,3,4,5"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="1dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:text="@string/lyd_desPrdPerda"
                                android:textColor="#F2910A"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lyd_qtdPerda"
                                android:layout_gravity="left"
                                android:textColor="#F2910A"
                                android:layout_marginRight="5dp"
                                android:textStyle="bold" />

                        </TableRow>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/cardview_dark_background"
                            android:focusable="false" />

                    </TableLayout>

                </HorizontalScrollView>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ldn_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_salvarPerda"
                android:onClick="setGrvPerda"
                app:backgroundTint="#FFA500" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>